# pebbles-game-gear-academy

./: .gitignore  Cargo.toml  README.md
io/: Cargo.toml
io/src/: lib.rs
rng/: Cargo.toml
rng/src/: lib.rs
src/: lib.rs
test/: basic.rs
